Fix the unreadable text color in the keyboard icon

--- a/data/KeyboardIcon.css
+++ b/data/KeyboardIcon.css
@@ -32,5 +32,4 @@
     box-shadow:
         0 0 2px alpha (#fff, 0.3),
         0 1px 0 alpha (#fff, 0.25);
-    color: #fff;
 }
